# quant_strategy

./: .env.example  .gitignore  AGENTS.md  AI_CONTEXT.md  CLAUDE.md  Crypto_Quant_Plan_v1.md  Makefile  README.md  STATUS.md  backtest_artifacts_claude_instructions.md  improved_ohlcv_timescaledb_plan.md  pr1_pr2_review_and_next_pr_plan.md  pyproject.toml  quant_strategy_architecture_map.html
.claude/: settings.json  settings.local.json
.github/: pull_request_template.md
backtesting/: artifact_rows.py  artifacts.py  c1_pairs_ou_backtest.py  c2_funding_carry_backtest.py  c3_sentiment_backtest.py  cpcv.py  daily_winner_backtest.py  data_loader.py  differential_validation.py  funding_xs_dispersion_backtest.py  nautilus_backtest.py  ohlcv_rotation_backtest.py  oi_positioning_backtest.py  parameter_sweep.py  pipeline_checkpoint1.py  pipeline_family_minting.py  pipeline_feasibility.py  pipeline_idea_generator.py  pipeline_orchestrator.py  pipeline_power_screen.py  pipeline_refit.py  pipeline_stage2_registry.py  pipeline_stage3_registry.py  replay.py  replay_validation.py  research_controls.py  result_utils.py  s5_residual_meanrev_backtest.py  s6_ts_momentum_backtest.py  s7_basis_meanrev_backtest.py  turtle_backtest.py  vectorbt_scanner.py  walk_forward.py  xs_momentum_backtest.py  xvenue_funding_spread_backtest.py  xvenue_funding_spread_probe.py
config/: external_data.yaml  h014_shadow.yaml  instrument_specs.yaml  pipeline_feedback_tags.yaml  risk.yaml  settings.yaml  stocks.yaml  strategies.yaml  universe.yaml  workstreams.yaml
docker/: Dockerfile  docker-compose.yml  prometheus.yml
docs/: AI_HANDOFF.md  AI_OUTPUT_CONTRACT.md  AI_WORKFLOW.md  ARCHITECTURE.md  BRANCH_VERSIONING.md  CHANGELOG_AI.md  CHANGE_MANIFEST_TEMPLATE.md  COMPRESSION_RULES.md  CONTEXT_BUDGET.md  CONTEXT_INDEX.md  CRITIQUE_PROTOCOL.md  CURRENT_STATE.md  DATA_FLOW.md  DEBUGGING_RUNBOOK.md  DESIGN_SPACE.md  DOC_IMPACT_MATRIX.md  DOC_LIFECYCLE.md  DOMAIN_RULES.md  EXPERIMENT_REGISTRY.md  FAILURE_MODES.md  FEATURE_MAP.md  GOLDEN_CASES.md  HYPOTHESIS_LEDGER.md  INVARIANTS.md  (+23 more)
research/crypto-alpha-lab/: AGENTS.md  README.md  pyproject.toml
research/crypto-alpha-lab/alpha_specs/: README.md  alpha_candidate_template.md  initial_candidates_2026-05-26.json  xs_momentum_2026-06-23.md
research/crypto-alpha-lab/backtest_configs/: README.md
research/crypto-alpha-lab/data/: README.md
research/crypto-alpha-lab/experiments/: README.md
research/crypto-alpha-lab/papers/: README.md  initial_screen_2026-05-26.json  paper_intake_template.md  scoring_rubric.md  search_log_2026-05-26.md
research/crypto-alpha-lab/reports/: README.md
research/crypto-alpha-lab/src/crypto_alpha_lab/: __init__.py
research/crypto-alpha-lab/src/crypto_alpha_lab/adapters/: __init__.py  parent_stage1.py
research/crypto-alpha-lab/src/crypto_alpha_lab/pipeline/: __init__.py  paper_ingestion.py
research/crypto-alpha-lab/src/crypto_alpha_lab/schemas/: __init__.py  alpha_candidate.py  backtest_config.py  paper_scoring.py
research/crypto-alpha-lab/src/crypto_alpha_lab/strategies/: __init__.py  base.py
research/crypto-alpha-lab/tests/: conftest.py  test_base_strategy.py  test_pipeline_adapters.py  test_registry_fixtures.py  test_schemas.py
(+805 files in other folders)
