[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crypto-alpha-lab"
version = "0.1.0"
description = "Research-only paper-driven crypto alpha discovery lab"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/crypto_alpha_lab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]
